# spec-control-ai

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: anonymizer.py  checker.py  config.py  deanonymizer.py  extractor.py  llm.py  parser.py  retriever.py  schemas.py  tools.py
backend/app/prompts/: checker.py  extractor.py
backend/scripts/: index_norms.py
data/norms/: README.md
data/samples/: README.md  error_catalog.md  schema.json
data/samples/electrical_spec_luch/: ground_truth.json
data/samples/ventilation_darvodgeo/: ground_truth.json
data/samples/ventilation_fosfokhim/: ground_truth.json
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
docs/superpowers/plans/: 2026-04-14-normative-checker.md
docs/superpowers/specs/: 2026-04-14-normative-checker-design.md
tests/: conftest.py  test_anonymizer.py  test_checker.py  test_checker_eval.py  test_chunking.py  test_deanonymizer.py  test_extractor.py  test_extractor_eval.py  test_llm.py  test_parser.py  test_retriever.py  test_schemas.py
