[project]
name = "spec-control-ai"
version = "0.1.0"
description = "PoC: automated normative compliance checking for technical documentation"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "faiss-cpu>=1.9",
    "sentence-transformers>=4.1",
    "openai>=1.82",
    "langfuse>=2.60",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "natasha>=1.6",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
